--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,15 @@
         "./server/chat-commands.js"
     ],
     "include": [
-        "./server/tournaments/lib/treenode.d.ts",
         "./config/formats.js",
         "./data/*",
         "./data/mods/*/*",
         "./dev-tools/*.ts",
         "./lib/*",
         "./server/*",
+        "./server/tournaments/*",
+        "./server/chat-commands/*.ts",
+        "./server/chat-plugins/*.ts",
         "./server/chat-plugins/chat-monitor.js",
         "./server/chat-plugins/daily-spotlight.js",
         "./server/chat-plugins/hangman.js",
@@ -30,13 +32,12 @@
         "./server/chat-plugins/mafia-data.js",
         "./server/chat-plugins/mafia.js",
         "./server/chat-plugins/othermetas.js",
-        "./server/chat-plugins/poll.js",
         "./server/chat-plugins/room-faqs.js",
         "./server/chat-plugins/thecafe.js",
         "./server/chat-plugins/thing-of-the-day.js",
         "./server/chat-plugins/uno.js",
         "./server/chat-plugins/wifi.js",
-        "./server/tournaments/*.js",
-        "./sim/**/*"
+        "./sim/**/*",
+        "./tools/set-import/*.ts"
     ]
 }
